--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -48,3 +48,4 @@ jobs:
         run: |
           echo "Deploying ${{ inputs.language }} app to ${{ inputs.env }}"
           cat config/${{ inputs.env }}-config.json
+          sh scripts/sample-scripts.sh
