--- a/deploy/deploy-java/action.yml
+++ b/deploy/deploy-java/action.yml
@@ -10,3 +10,8 @@ runs:
   steps:
     - run: echo "Deploying Java app to ${{ inputs.env }}"
       shell: bash
+      echo "Deploying ${{ inputs.language }} app to ${{ inputs.env }}"
+      run |
+      cat config/${{ inputs.env }}-config.json
+      chmod +x scripts/sample-script.sh
+      sh scripts/sample-script.sh
