--- a/deploy/deploy-java/action.yml
+++ b/deploy/deploy-java/action.yml
@@ -11,4 +11,7 @@ runs:
     - run: echo "Deploying Java app to ${{ inputs.env }}"
       shell: bash
       echo "Deploying ${{ inputs.language }} app to ${{ inputs.env }}"
+    - name: Run shell script
+      shell: bash
+      run: ./scripts/sample-script.sh
      
