--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -33,37 +33,61 @@ jobs:
         uses: pkseaws/repo-b/build/build-python@main
         with:
           working-directory: python
-  deploy:
+  # deploy:
+  #     needs: build
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #       - uses: actions/checkout@v4
+  #       - name: Deploy Java
+  #         if: inputs.language == 'java'
+  #         uses: pkseaws/repo-b/deploy/deploy-java/@main
+  #         with:
+  #           working-directory: java
+
+  #       - name: Deploy Python
+  #         if: inputs.language == 'python'
+  #         uses: pkseaws/repo-b/deploy/deploy-java@main
+  #         with:
+  #           working-directory: python
+
+  # upload_artifact:
+  #       needs: deploy
+  #       runs-on: ubuntu-latest
+  #       steps:
+  #         - uses: actions/checkout@v4
+  #         - name: Upload Artifact
+  #           if: inputs.upload_artifact == true
+  #           uses: pkseaws/repo-b/upload-artifact@main
+  #           with:
+  #            name: ${{ inputs.language }}-artifact
+  #            #path: ${{ inputs.language }}/
+  #            path: artifact-repo
+  #            env: ${{ inputs.env }}
+  #            version: ${{ env.BUILD_VERSION }}
+
+  deploy-upload:
       needs: build
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v4
-        - name: Deploy Java
-          if: inputs.language == 'java'
-          uses: pkseaws/repo-b/deploy/deploy-java/@main
+        - name: Set up version
+          run: echo "BUILD_VERSION=1.0.${{ github.run_number }}" >> $GITHUB_ENV
+        - name: Deploy
+          run: |
+              echo "Deploying ${{ inputs.language }} app to ${{ inputs.env }}"
+              cat config/${{ inputs.env }}-config.json
+              chmod +x scripts/sample-script.sh
+              sh scripts/sample-script.sh
+        - name: Upload Artifact
+          if: inputs.upload_artifact == true
+          uses: pkseaws/repo-b/upload-artifact@main
           with:
-            working-directory: java
+           name: ${{ inputs.language }}-artifact
+           #path: ${{ inputs.language }}/
+           path: artifact-repo
+           env: ${{ inputs.env }}
+           version: ${{ env.BUILD_VERSION }}
 
-        - name: Deploy Python
-          if: inputs.language == 'python'
-          uses: pkseaws/repo-b/deploy/deploy-java@main
-          with:
-            working-directory: python
-
-  upload_artifact:
-        needs: deploy
-        runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v4
-          - name: Upload Artifact
-            if: inputs.upload_artifact == true
-            uses: pkseaws/repo-b/upload-artifact@main
-            with:
-             name: ${{ inputs.language }}-artifact
-             #path: ${{ inputs.language }}/
-             path: artifact-repo
-             env: ${{ inputs.env }}
-             version: ${{ env.BUILD_VERSION }}
         
 
       # - name: Upload Artifact
