--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -83,8 +83,8 @@ jobs:
           uses: pkseaws/repo-b/upload-artifact@main
           with:
            name: ${{ inputs.language }}-artifact
-           #path: ${{ inputs.language }}/
-           path: artifact-repo
+           path: ${{ inputs.language }}/
+           #path: artifact-repo
            env: ${{ inputs.env }}
            version: ${{ env.BUILD_VERSION }}
 
