--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -12,6 +12,14 @@ on:
       upload_artifact:
         required: true
         type: boolean
+      terraform_dir:
+        required: true
+        type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
 
 jobs:
   build:
@@ -58,6 +66,30 @@ jobs:
            #path: artifact-repo
            env: ${{ inputs.env }}
            version: ${{ env.BUILD_VERSION }}
-    
+  terraform:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.terraform_dir }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+
+     # - name: Terraform Apply
+      #  if: ${{ github.event_name == 'workflow_dispatch' }}
+       # run: terraform apply -auto-approve tfplan
 
      
