--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Set up Terraform
         uses: pkseaws/repo-b/terraform@main
         with:
-         terraform_dir: 
+         working-directory: ${{ inputs.terraform_dir }}
         #uses: hashicorp/setup-terraform@v3
 
       #- name: Terraform Init
