--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -4,10 +4,10 @@ on:
   workflow_call:
     inputs:
       language:
-        required: true
+        required: false
         type: string
       env:
-        required: true
+        required: false
         type: string
       upload_artifact:
         required: true
