--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -53,7 +53,7 @@ jobs:
         - name: Deploy
           run: |
               echo "Deploying ${{ inputs.language }} app to ${{ inputs.env }}"
-              cat config/${{ inputs.env }}-config.json
+              #cat config/${{ inputs.env }}-config.json
               chmod +x scripts/*.sh
               sh scripts/sample-script.sh
               sh scripts/deploy-env.sh ${{ inputs.env }}
