--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -13,7 +13,7 @@ on:
         required: true
         type: boolean
       terraform_dir:
-        required: false
+        required: true
         type: string
     secrets:
       AWS_ACCESS_KEY_ID:
