--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -68,10 +68,6 @@ jobs:
            version: ${{ env.BUILD_VERSION }}
   terraform:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.terraform_dir }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -79,7 +75,7 @@ jobs:
       - name: Set up Terraform
         uses: pkseaws/repo-b/terraform@main
         with:
-         working-directory: ${{ inputs.terraform_dir }}
+         working-directory: terraform
         #uses: hashicorp/setup-terraform@v3
 
       #- name: Terraform Init
