--- a/terraform/action.yml
+++ b/terraform/action.yml
@@ -10,7 +10,8 @@ runs:
   steps:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
-    - run |
+    - name: show terraform dir
+      run: |
         echo "${{ inputs.terraform_dir }}"
 
     - name: Terraform Init
