--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -76,6 +76,8 @@ jobs:
         uses: pkseaws/repo-b/terraform@main
         with:
          working-directory: terraform
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #uses: hashicorp/setup-terraform@v3
 
       #- name: Terraform Init
