--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -76,6 +76,7 @@ jobs:
         uses: pkseaws/repo-b/terraform@main
         with:
          working-directory: terraform
+        env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #uses: hashicorp/setup-terraform@v3
